[package]
name = "pppkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compress-tools = "0.12.2"
env_logger = "0.6.1"
log = "0.4"
reqwest = { version = "0.10.10", features = ["blocking"] }
serde = "1.0.118"
serde_derive = "1.0.118"
toml = "0.5.8"
